--- a/yelp_ratings_nb.ipynb
+++ b/yelp_ratings_nb.ipynb
@@ -848,7 +848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sentiment scores of restaurant review excerpts weakly correlates with restaurant rating. A stronger correlation might be possible with full reviews beyond those provided by the Yelp API."
+    "Sentiment score of restaurant review excerpts weakly correlates with restaurant rating. A stronger correlation might be possible with full reviews beyond those provided by the Yelp API."
    ]
   }
  ],
